testsuite/tests/dependent/should_fail/T13780a.stderr

T13780a.hs:9:40: error: [GHC-88634]
    • Data constructor ‘MkFoo’ cannot be used here
        (it has an unpromotable context ‘a ~ Bool’)
    • In the second argument of ‘(~)’, namely ‘MkFoo’
      In the definition of data constructor ‘SMkFoo’
      In the data instance declaration for ‘Sing’
